objects/JHJX__IdDocumentConfig__c.object
<CustomObject>
    <description>JXChange configuration for IdVerifyAdd operation</description>
    <fields>
        <fullName>JHJX__Document_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user populates this optional lookup field to select the Id Document Type.</description>
        <label>Document Type</label>
        <referenceTo>LLC_BI__Id_Document_Type__c</referenceTo>
        <relationshipLabel>Id Document Configs</relationshipLabel>
        <relationshipName>Id_Document_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JHJX__IdVerifyQueryVal__c</fullName>
        <description>The user populates this optional text field to configure the field from the LLC_BI__Id_Document__c object that is booked to the core.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IdVerifyQueryVal</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__IdVerifyQuery__c</fullName>
        <description>The user populates this optional text field to configure the IdVerifyQuery that is used when booking to the core.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>IdVerifyQuery</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Id Document Config</label>
    <nameField>
        <displayFormat>JX-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Id Document Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>